# articles-db

./: .gitignore
api/: .env.template  README.md  main.py  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 2024_07_08_1238-1af0c7615454_initial.py  2024_07_09_1206-08b1b3d0a689_initial.py
api/configs/: config.py
api/models/: __init__.py  article.py  base.py  db.py  problem.py  user.py
api/repositories/: abc_repositories.py
api/repositories/sqlalchemy/: article_repository.py  user_repository.py
api/routers/: article_router.py  auth_router.py
api/schemas/: articles_schemas.py
api/services/: article_service.py  user_service.py
docker/: docker-compose.yml
docker/api/: dockerfile
docker/data/base/1/: 2619  pg_internal.init
docker/data/base/5/: pg_internal.init
docker/data/global/: 1260  2671  pg_control  pg_internal.init
docker/data/pg_stat/: pgstat.stat
docker/postgres/: README.md  docker-compose.yml
docker/postgres/data/: postmaster.pid
docker/postgres/data/global/: 1260  1262  pg_control  pg_internal.init
docker/web/: dockerfile
web/: nginx.conf  package-lock.json  package.json
web/src/: app.tsx  routeTree.gen.ts
web/src/api/: index.ts
web/src/models/: Article.ts
web/src/models/response/: ArticleResponse.ts
web/src/pages/ArticleCreatePage/: ArticleCreatePage.tsx  ArticleCreator.tsx
web/src/pages/IndexPage/: IndexPage.tsx  (+2 more)
web/src/routes/: __root.tsx  _authenticated.ts  _notAuthenticated.ts  index.tsx
web/src/services/: ArticleService.ts
web/src/stores/: authStore.ts
web/src/utils/: utils.ts
(+72 files in other folders)
